# morphometrics-tool

./: .gitignore  LICENSE  README.md  README_ja.md  __main__.spec  pyproject.toml  requirements.txt
docs/: 404.html  about.html  analysis.html  developer_guide_ja.html  index.html  installation.html  preparation.html  related_tools.html  requirements.html  search.json  theoretical_background.html  usage.html
docs/site_libs/bootstrap/: bootstrap-264a0fc3a96c72ca7334393e02078ef0.min.css
runtime_hooks/: pyi_rth_torchpath.py
setup/: setup.bat
src/leaf_shape_tool/: __main__.py  main.py
src/leaf_shape_tool/utils/: add_ROIs_layer.py
src/leaf_shape_tool/widgets/: binarize_image.py  calculate_efd.py  clear_viewer.py  crop_rectangle.py  extract_contour.py  make_points_tool_widget.py  rotate_image.py  set_scale.py
website/: _quarto.yml  analysis.qmd  developer_guide_ja.qmd  index.qmd  preparation.qmd  references.bib  related_tools.qmd  usage.qmd
website/assets/: assets.afdesign~lock~
