[project]
name = "leaf-shape-tool"
version = "0.1.0"
dependencies = ["napari[all]==0.6.6", "numpy==2.2.6", "opencv-python", "scikit-image", "scipy", "torch"]
requires-python = ">=3.11, <3.13"
authors = [
  { name = "Maple", email = "maplenavy@synology.me" }
]
maintainers = [
  {name = "Maple", email = "maplenavy@synology.me"}
]
description = "A napari-based GUI for leaf shape analysis"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["morphometrics", "elliptic fourier analysis", "leaf shape", "napari"]
