[project]
name = "leaf-shape-tool"
version = "0.1.0"

requires-python = ">=3.11, <3.13"
authors = [
  { name = "Maple", email = "maplenavy@synology.me" }
]
maintainers = [
  {name = "Maple", email = "maplenavy@synology.me"}
]
description = "A napari-based GUI for leaf shape analysis"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["morphometrics", "elliptic fourier analysis", "leaf shape", "napari"]

dependencies = [
    "napari==0.6.6",
    "PyQt6>=6.6.0",
    "numpy==2.2.6",
    "opencv-python",
    "scikit-image",
    "scipy",
    "pyinstaller==6.16.0",
]

[project.scripts]
leaf-shape-tool = "leaf_shape_tool.main:main"

[tool.setuptools.packages.find]
where = ["src"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
